--- a/.github/workflows/uplift-all.yaml
+++ b/.github/workflows/uplift-all.yaml
@@ -21,13 +21,10 @@ jobs:
           pip install git+https://github.com/opengeospatial/ogc-na-tools.git
       - name: Process files
         run: |
-          #find . -name '*.csv' | while read CSV_FILE; do python -m ogc.na.ingest_json \
-          #           --skip-on-missing-context --json-ld --context csv2python.yml "${CSV_FILE}" > "${CSV_FILE}.json"
-          #          done
           python -m ogc.na.ingest_json --batch --all --skip-on-missing-context \
             --json-ld --ttl --work-dir . --domain-config .ogc/catalog.ttl
       - name: Add and commit
         uses: EndBug/add-and-commit@v9
         with:
-          message: "Semantic uplift of all vocabulary source files"
+          message: "Semantic uplift of profile/vocabulary binding source CSV files"
           default_author: github_actions
