--- a/bblocks-config.yaml
+++ b/bblocks-config.yaml
@@ -2,23 +2,23 @@ identifier-prefix: icsm.profiles.
 
 name: Implementation Profiles for 3D CSDM
 abstract: |
-  This repository contains profiles of the [Cadastral Survey Data Exchange standard](https://icsm-au.github.io/3d-csdm-schema/), using the [OGC Building Blocks methodology](https://github.com/opengeospatial/bblock-template/blob/master/USAGE.md):
-  
-  - [New Zealand](bblock/icsm.profiles.nz)
-  - [Victoria, Australia](bblock/icsm.profiles.vic)
-  - [Western Australia](bblock/icsm.profiles.wa)
-  - [ICSM]((bblock/icsm.profiles.common) - Aus/NZ Intergovernmental Committee on Survey and Mapping Common Profile
+  This repository contains the 
+   [ICSM](bblock/icsm.profiles.common) - Aus/NZ Intergovernmental Committee on Survey and Mapping Common (ANZLIC ICSM) profile of the [Cadastral Survey Data Exchange standard](https://icsm-au.github.io/3d-csdm-schema/). It is implemented by a further set of jurisdiction specific profiles using local vocabulary (codelists) and any additional content and rules necessary.
+   
+  The profile is defined using the [OGC Building Blocks methodology](https://ogcincubator.github.io/bblocks-docs/).
   
 description: |
-  Each jurisdiction profile extends a [common ICSM profile] of a potentially universal [model of 3D cadastre](https://icsm-au.github.io/3d-csdm/), and a [JSON schema](https://icsm-au.github.io/3d-csdm-schema/) compatible with the [OGC API Features](https://opengeospatial.github.io/e-learning/ogcapi-features/text/basic-main.html) data exchange model.
-
-  Implementation Profiles (e.g. for each Jurisdiction) use the same documentation form as the common model, but extended with specific constraints and vocabulary usages.
+  Each jurisdiction profile extends a [common ICSM profile] of a potentially universal [model of 3D cadastre](https://icsm-au.github.io/3d-csdm-model/), and a [JSON schema](https://icsm-au.github.io/3d-csdm-common/).
   
+  Implementation Profiles (e.g. for each Jurisdiction) use the same documentation form as the common model, but extended with specific constraints and vocabulary usages.
+
+  This profile is thus compatible with the [OGC API Features](https://opengeospatial.github.io/e-learning/ogcapi-features/text/basic-main.html) data exchange specification, and can be implemented by any standards compliant software capable of handling nested object sub-schemas and control of codelist in content.
+
   e.g. [Victoria (Australian state) Profile](https://icsm-au.github.io/3d-csdm/docs/vic-profile/)
   
-  _The **[REVIEW GUIDE](https://github.com/icsm-au/3d-csdm-profiles/blob/main/REVIEW_GUIDE.md)** provides a detailed overview of all aspects of the design and testing process, and related materials._
+  _The **[REVIEW GUIDE](https://github.com/icsm-au/3d-csdm-profile-icsm/blob/main/REVIEW_GUIDE.md)** provides a detailed overview of all aspects of the design and testing process, and related materials._
 
-  The relationships of these profiles and the underlying  common model is shown below:
+  The relationships of this profile to specific jurisdictional profiles and and the underlying  common model are shown below:
   
   ![](https://lucid.app/publicSegments/view/f7e6c029-db67-4186-9592-cab6ec3437d0/image.png)
 
